<resources>
    <string name="app_name">Opa</string>
    <string name="guest_login_buttom">Guest Login</string>
    <string name="registered_user_login_button">Registered User Login</string>
    <string name="organizer_login_button">Organizer Login</string>
    <string name="welcome">Welcome!</string>
    <string name="Name">Name:</string>
    <string name="username">Enter User Name</string>
    <string name="event_id_number">Enter Event Id</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="event_id">Event Id:</string>
    <string name="please_fill_out">Please Answer the Following:</string>
    <string name="enter_response">Enter Response Here</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="friend_list">Friend List</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="register_account_title">Become a Registered User</string>
    <string name="register_now">Register</string>
    <string name="not_now">Not Now</string>
</resources>
